[package]
name = "kitty-graphics-protocol"
version = "0.1.3"
edition = "2024"
description = "A Rust library for the Kitty terminal graphics protocol"
license = "MIT"
keywords = ["kitty", "terminal", "graphics", "image", "protocol"]
categories = ["command-line-interface", "graphics", "multimedia::images"]
repository = "https://github.com/Darkiiiiiice/kitty-graphics-protocol-rs"
homepage = "https://github.com/Darkiiiiiice/kitty-graphics-protocol-rs"
documentation = "https://docs.rs/kitty-graphics-protocol"
readme = "README.md"
authors = ["Darkiiiiiice"]
exclude = ["/.github/"]

[dependencies]
base64 = "0.22.1"
thiserror = "2.0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2.170"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"

[[bench]]
name = "graphics_protocol"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--no-deps", "--document-private-items","--generate-link-to-definition"]
